src/objects/Discount__c.object
<CustomObject>
    <description>Discount Header which should be associated to the Price Plan.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trad IH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_Applied__c</fullName>
        <label>Level Applied</label>
        <picklist>
            <picklistValues>
                <fullName>Pricelist</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Simple</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Discount</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>External_ID__c</columns>
        <columns>Level_Applied__c</columns>
        <columns>Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>